# TomoBabel

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.rst  pyproject.toml
docs/: conf.py  gemmi-inv.txt  gemmi.inv  index.rst
docs/scripts/: draw_diagram.py
docs/source/: data_objs.rst  datamodel_explained.rst  geometry.rst
docs/source/converters/: cmd_dynamo.rst  cmd_eman2.rst  cmd_scipion.rst  cmd_warpm.rst
docs/source/converters/relion/: cmd_relion.rst  relion_script.rst  relion_ts_converter.rst
docs/source/dev/: dev_data_model.rst  setup.rst  writing_converters.rst
scripts/: draw_diagram.py  make_stubs.py  update_models.py
src/tomobabel/converters/relion/: relion_convert_tilt_series.py  relion_converter.py
src/tomobabel/models/: annotation.py  annotation_factory.py  basemodels.py  imaging.py  tomo_images.py  top_level.py  transform_factory.py  transformations.py
src/tomobabel/models/ebi_compatibility/: ebi_cats.py  ebi_dic_parse.py  ebi_validation.py
tests/converters/relion/: relion_testing_utils.py  test_convert_relion_czii_metadata.py  test_convert_tilt_series.py
tests/converters/relion/test_data/: TS_01_movie_collections.json  TS_01_tilt_series.json  aligned_ts_all_movie_cols.json  aligned_ts_all_tilt_series.json  ctf_all_movie_cols_gain_defect.json  ctf_all_tilt_series.json  import_all_movie_cols.json  import_all_tilt_series.json  mocorr_all_movie_cols.json
tests/converters/relion/test_data/MotionCorr/: job.star
tests/models/: test_annotation_factory.py  test_annotations.py  test_basemodels.py  test_ebi_linked_validation.py  test_imaging.py  test_transform_factory.py
tomobabel/: utils.py
tomobabel/converter_scripts/relion/: relion_converter_script.py
tomobabel/converters/relion/: relion_convert_tilt_series.py  relion_converter.py
tomobabel/models/: annotation.py  annotation_factory.py  basemodels.py  imaging.py  models.py  models.pyi  tilt_series.py  tomo_images.py  tomo_imageset.py  tomograms.py  top_level.py  transform_factory.py  transformations.py
tomobabel/models/ebi_compatibility/: ebi_dic_parse.py  ebi_validation.py
tomobabel/tests/: test_utils.py  testing_tools.py
tomobabel/tests/converters/relion/: relion_testing_utils.py  test_convert_relion_czii_metadata.py  test_convert_tilt_series.py  test_utils.py
tomobabel/tests/converters/relion/test_data/: TS_01_movie_collections.json  TS_01_tilt_series.json  aligned_ts_all_movie_cols.json  aligned_ts_all_tilt_series.json  ctf_all_movie_cols.json  ctf_all_movie_cols_gain_defect.json  ctf_all_tilt_series.json  ctf_dataset.json  import_all_movie_cols.json  import_all_tilt_series.json  mocorr_all_movie_cols.json  (+1 more)
tomobabel/tests/models/: test_annotation_factory.py  test_annotations.py  test_basemodels.py  test_ebi_linked_validation.py  test_imaging.py  test_transform_factory.py
