[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["tomobabel*"]
exclude = ["data_model", "scripts"]
namespaces = false

[project]
name = "TomoBabel"
version = "0.1"
description = "Universal data standard for cryoET"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

dependencies = [
    "gemmi==0.6.5",  # temporary downgrade to stop mypy errors
    "mrcfile",
    "numpy>=1.20.0",

]

optional-dependencies.dev = [
    "black==24.1.1",  # this version should match the one in .pre-commit-config.yaml
    "flake8==7.0.0",  # this version should match the one in .pre-commit-config.yaml
    "mypy==1.8.0",  # this version should match the one in .pre-commit-config.yaml
    "flake8-pyproject",
    "pre-commit",
    "pytest",
    "sniffio",
    "types-setuptools",
]

optional-dependencies.docs = [
    "myst-parser",
    "sphinx",
    "sphinx-argparse",
    "sphinx-rtd-theme"
]

[project.urls]
Repository = "https://github.com/TomoBabel"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']  # TODO: add py313, which requires a newer Black version
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.flake8]
max-line-length = 88
max-complexity = 18

# Ignore some warnings that are incompatible with black
ignore = [
    "E203",  # whitespace before `:`
    "E266",  # too many leading `#` for block comment
    "W503",  # line break before binary operator
]

exclude = [
    ".git",
    "__pycache__",
    "_build",
    "build",
    "dist",
    "venv",
    "tomobabel/models/models.py"
]

[tool.mypy]
files = ["tomobabel", "tests"]
python_version = "3.9"
warn_unused_configs = true
exclude = 'tomobabel/models/models\.py$'
mypy_path = ['tomobabel/models/stubs']

[[tool.mypy.overrides]]
module = ["gemmi", "mrcfile"]
ignore_missing_imports = true
